# Pong-GLFW

./: .gitignore  CMakeLists.txt  PongGraphics.sln  README.md  compile.bat  install-dependencies.sh  main.c
Makefile/Mac_OS/: Makefile
PongGraphics/: Draw_Text.c  Draw_Text.h  Game.c  Game.h  Game_Draw.c  PongGraphics.vcxproj  PongGraphics.vcxproj.filters  main.c
PongGraphics/include/: Draw_Text.h  Game.h  Game_Draw.h  linmath.h
